[metadata]
name = hubris
description = Hubris
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
author = Gigaquads
author_email = notdsk@gmail.com
url = https://github.com/gigaquads/hubris.git
keywords = 
	
classifiers = 
	Programming Language :: Python :: 3.9
	License :: OSI Approved :: MIT License

[options]
scripts = 
	
dependency_links = 
	
packages = 
	find:
install_requires = 
	ravel
	appyratus
	pytest
	ipdb
